--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://your-backend.onrender.com
+REACT_APP_API_URL=https://vidhi-saarathi-backend.onrender.com
+# https://your-backend.onrender.com
